// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayBadge should render 1`] = `
<span
  className="badge badge-primary"
>
  <span
    className="badge-item badge-item-expand"
  >
    4
  </span>
</span>
`;

exports[`ClayBadge should render with custom className 1`] = `
<span
  className="badge badge-primary foo bar"
>
  <span
    className="badge-item badge-item-expand"
  >
    4
  </span>
</span>
`;
